--- a/PokemonTrainers_Store/Style.css
+++ b/PokemonTrainers_Store/Style.css
@@ -88,7 +88,25 @@
 }
 
 .navbar-nav .nav-link:hover {
-    color: #8EAAFB;
+    background-color: rgba(8, 29, 94, 0.6);
+    color: white;
+    border-radius: 20px;
+    padding: 8px 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.navbar-nav .nav-link2
+    {
+        color: #333;
+        font-weight: bold;
+        text-transform: uppercase;
+        transition: color 0.3s ease;
+        text-decoration: none;
+    }
+
+.navbar-nav .nav-link2:hover {
+    color: #5AA6A6;
+    text-shadow: none;
     text-decoration: underline;
 }
 
