--- a/PokemonTrainers_Store/StyleIndex.css
+++ b/PokemonTrainers_Store/StyleIndex.css
@@ -95,14 +95,13 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-.navbar-nav .nav-link2
-    {
+.navbar-nav .nav-link2 {
         color: #333;
         font-weight: bold;
         text-transform: uppercase;
         transition: color 0.3s ease;
         text-decoration: none;
-    }
+}
 
 .navbar-nav .nav-link2:hover {
     color: #5AA6A6;
